// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectContextChoices /> should render select with 1 selected option 1`] = `
<InfoField
  className=""
  errorText=""
  hasUnderline={true}
  hasValue={true}
  label=""
  leftElement={null}
  rightElement={
    <Chevron
      className="sg-pez732-chevron"
    />
  }
  showErrorText={true}
>
  <div
    aria-hidden={true}
    className="sg-1jjwasa-toggle"
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    Germany
  </div>
  <ContextMenu
    classes={
      {
        "button": "",
        "container": "",
      }
    }
    disabled={false}
    isOpened={false}
    onStateChange={[Function]}
    scroll={true}
    showToggle={false}
  >
    <Item
      autoClose={false}
      className="sg-e3edmo-itemSelected"
      disabled={false}
      key="DE"
      onClick={[Function]}
    >
      Germany
    </Item>
    <Item
      autoClose={false}
      className=""
      disabled={false}
      key="US"
      onClick={[Function]}
    >
      United states
    </Item>
  </ContextMenu>
</InfoField>
`;

exports[`<SelectContextChoices /> should render select with 2 options 1`] = `
<InfoField
  className=""
  errorText=""
  hasUnderline={true}
  hasValue={true}
  label=""
  leftElement={null}
  rightElement={
    <Chevron
      className="sg-pez732-chevron"
    />
  }
  showErrorText={true}
>
  <div
    aria-hidden={true}
    className="sg-1jjwasa-toggle"
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    common.please_choose
  </div>
  <ContextMenu
    classes={
      {
        "button": "",
        "container": "",
      }
    }
    disabled={false}
    isOpened={false}
    onStateChange={[Function]}
    scroll={true}
    showToggle={false}
  >
    <Item
      autoClose={false}
      className=""
      disabled={false}
      key="DE"
      onClick={[Function]}
    >
      Germany
    </Item>
    <Item
      autoClose={false}
      className=""
      disabled={false}
      key="US"
      onClick={[Function]}
    >
      United states
    </Item>
  </ContextMenu>
</InfoField>
`;

exports[`<SelectContextChoices /> should render select with no options 1`] = `
<InfoField
  className=""
  errorText=""
  hasUnderline={true}
  hasValue={true}
  label=""
  leftElement={null}
  rightElement={
    <Chevron
      className="sg-pez732-chevron"
    />
  }
  showErrorText={true}
>
  <div
    aria-hidden={true}
    className="sg-1jjwasa-toggle"
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    common.please_choose
  </div>
  <ContextMenu
    classes={
      {
        "button": "",
        "container": "",
      }
    }
    disabled={false}
    isOpened={false}
    onStateChange={[Function]}
    scroll={true}
    showToggle={false}
  />
</InfoField>
`;
